--- a/client/src/index.css
+++ b/client/src/index.css
@@ -1,3 +1,9 @@
+*{
+  box-sizing: border-box;
+}
+#root{
+  height: 100vh;
+}
 body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
