Shared tasks/ unshare

--- a/client/src/pages/Profile/Profile.css
+++ b/client/src/pages/Profile/Profile.css
@@ -1,7 +1,6 @@
-@import url('https://fonts.googleapis.com/css2?family=Inter&family=Montserrat&family=Philosopher&display=swap');
+
 .profilePage{
     background-color: #04011C;
-    font-family: 'Montserrat', sans-serif;
     display: flex;
     flex-direction: row;
     min-height: 100vh;
@@ -103,7 +102,6 @@
 
 .profileBottomContainer-left-text{
     padding-bottom: 2%;
-    border-bottom: #FFF solid 1px;
     font-size: calc(0.5vw + 1.5vh + 0.9vmin);
     font-weight: bold;
 }
@@ -122,6 +120,9 @@
     display: flex;
     flex-direction: column;
     justify-content: space-between;
+    overflow-y: scroll;
+    max-height: 80vh;
+    width: 100%;
 }
 .modify-delete-buttons-div{
     display: flex;
@@ -173,4 +174,7 @@ textarea{
     height: 10vh;
     text-align: center;
     font-size: calc(0.5vw + 0.9vh + 0.9vmin);
+}
+.go3958317564 {
+    height: 100% !important;
 }
