--- a/client/src/index.css
+++ b/client/src/index.css
@@ -1,19 +1,14 @@
+@import url('https://fonts.googleapis.com/css2?family=Inter&family=Montserrat&family=Philosopher&display=swap');
 *{
   box-sizing: border-box;
+  font-family: 'Montserrat', sans-serif;
 }
 #root{
   height: 100vh;
+  background-color: #04011C;
 }
 body {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+  background-color: #04011C;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
-}
